[build-system]
requires = ["setuptools"]

[project]
name = "goalie"
version = "0.2"
dependencies = [
  "black",
  "coverage",
  "flake8",
  "parameterized",
  "pre-commit",
]
authors = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Davor Dundovic"},
  {name = "Eleda Johnson"},
  {name = "Stephan C. Kramer"},
]
maintainers = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Davor Dundovic"},
  {name = "Eleda Johnson"},
  {name = "Stephan C. Kramer"},
]
description = "Goal-oriented error estimation and mesh adaptation for finite element problems solved using Firedrake"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://mesh-adaptation.github.io"
Documentation = "https://mesh-adaptation.github.io/goalie/index.html"
Repository = "https://github.com/mesh-adaptation/goalie"

[tool.setuptools]
packages = ["goalie", "goalie_adjoint"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
	"ignore:`np.bool8` is a deprecated alias for `np.bool_`*:DeprecationWarning",
	"ignore:unable to find git revision*:UserWarning",
]
