[build-system]
requires = ["setuptools"]

[project]
name = "goalie"
version = "0.2"
dependencies = [
  "black",
  "coverage",
  "flake8",
  "parameterized",
  "pre-commit",
]
authors = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Davor Dundovic"},
  {name = "Eleda Johnson"},
  {name = "Stephan C. Kramer"},
]
maintainers = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Davor Dundovic"},
  {name = "Eleda Johnson"},
  {name = "Stephan C. Kramer"},
]
description = "Goal-oriented error estimation and mesh adaptation for finite element problems solved using Firedrake"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://mesh-adaptation.github.io"
Documentation = "https://mesh-adaptation.github.io/goalie/index.html"
Repository = "https://github.com/mesh-adaptation/goalie"

[tool.setuptools]
packages = ["goalie", "goalie_adjoint"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
)/
'''

[tool.ruff]
line-length = 88
select = [
#  "B",  # flake8-bugbear  TODO: enable this  (#163)
#  "C",  # mccabe complexity  TODO: enable this (#163)
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
ignore = [
  "E501",  # line too long
  "E226",  # missing whitespace around arithmetic operator
  "E402",  # module level import not at top of file
  "E741",  # ambiguous variable name
  "F403",  # unable to detect undefined names
  "F405",  # name may be undefined, or defined from star imports
]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore:`np.bool8` is a deprecated alias for `np.bool_`*:DeprecationWarning",
	"ignore:unable to find git revision*:UserWarning",
]
