[build-system]
requires = [
  "matplotlib",
  "setuptools",
]

[project]
name = "goalie"
version = "0.2"
authors = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Davor Dundovic"},
  {name = "Eleda Johnson"},
  {name = "Stephan C. Kramer"},
]
maintainers = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Davor Dundovic"},
  {name = "Eleda Johnson"},
  {name = "Stephan C. Kramer"},
]
description = "Goal-oriented error estimation and mesh adaptation for finite element problems solved using Firedrake"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = [
  "vtk",
]

[project.optional-dependencies]
dev = [
  "cffconvert",
  "coverage",
  "parameterized",
  "pre-commit",
  "ruff",
  "vtk",
]

[project.urls]
Homepage = "https://mesh-adaptation.github.io"
Documentation = "https://mesh-adaptation.github.io/goalie/index.html"
Repository = "https://github.com/mesh-adaptation/goalie"

[tool.setuptools]
packages = ["goalie", "goalie_adjoint"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "C",  # mccabe complexity
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
ignore = [
  "C901",  # function is too complex (TODO #165: enable this)
]
[tool.ruff.lint.per-file-ignores]
"demos/burgers-hessian.py" = [
  "E501",  # line too long
]
"demos/*.py" = [
  "E402",  # module level import not at top of file
  "F403",  # unable to detect undefined names
  "F405",  # name may be undefined, or defined from star imports
]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore:`np.bool8` is a deprecated alias for `np.bool_`*:DeprecationWarning",
	"ignore:unable to find git revision*:UserWarning",
]
